--- a/Lab6/backend/package.json
+++ b/Lab6/backend/package.json
@@ -15,6 +15,7 @@
 		"cookie-parser": "~1.4.3",
 		"method-override": "~2.3.6",
 		"express-session": "~1.14.1",
-		"serve-favicon": "~2.5.0"
+		"serve-favicon": "~2.5.0",
+		"multer": "~1.3.0"
 	}
 }
