--- a/Lab6/backend/package.json
+++ b/Lab6/backend/package.json
@@ -17,5 +17,8 @@
 		"express-session": "~1.14.1",
 		"serve-favicon": "~2.5.0",
 		"multer": "~1.3.0"
+	},
+	"scripts": {
+    "start": "node server.js"
 	}
 }
